k8s/namespaces/staging1/bff-boletagem/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bff-boletagem
  name: bff-boletagem
  namespace: staging1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: bff-boletagem
###
