k8s/namespaces/staging1/bff-boletagem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
  namespace: staging1
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization,X-Requested-With,x-lockid,Cache-Control,accept-language"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx-private
  tls:
  - hosts:
    - "bff.staging1.sqfaas.dev"
    secretName: ingress-secret
  rules:
    - host: "bff.staging1.sqfaas.dev"
      http:
        paths:
        - path: /shell
          pathType: Prefix
          backend:
            service:
              name: bff-shell
              port:
                number: 80
        - path: /componentes
          pathType: Prefix
          backend:
            service:
              name: bff-componentes
              port:
                number: 80
        - path: /callback
          pathType: Prefix
          backend:
            service:
              name: bff-callback
              port:
                number: 80
        - path: /cadastros-basicos
          pathType: Prefix
          backend:
            service:
              name: bff-cadastros-basicos
              port:
                number: 80
        - path: /gestao-carteiras
          pathType: Prefix
          backend:
            service:
              name: bff-gestao-carteiras
              port:
                number: 80
        - path: /interoperabilidade
          pathType: Prefix
          backend:
            service:
              name: bff-interoperabilidade
              port:
                number: 80
        - path: /boletagem
          pathType: Prefix
          backend:
            service:
              name: bff-boletagem
              port:
                number: 80
        - path: /impostos-tributos
          pathType: Prefix
          backend:
            service:
              name: bff-impostos-tributos
              port:
                number: 80
        - path: /importacoes
          pathType: Prefix
          backend:
            service:
              name: bff-importacoes
              port:
                number: 80
        - path: /favoritos
          pathType: Prefix
          backend:
            service:
              name: bff-param-favoritos
              port:
                number: 80
        - path: /sqctrl-legado
          pathType: Prefix
          backend:
            service:
              name: bff-sqctrl-legado
              port:
                number: 80
